# dawn

dawn/scripts/: _dawn4py.cpp.in
dawn/src/dawn/AST/: ASTExpr.cpp
dawn/src/dawn/CodeGen/: Driver.cpp  Options.inc
dawn/src/dawn/Compiler/: DawnCompiler.cpp  DawnCompiler.h
dawn/src/dawn/IIR/: IIR.h  StencilInstantiation.cpp  StencilInstantiation.h
dawn/src/dawn/Optimizer/: CMakeLists.txt  Driver.cpp  Options.inc  PassFieldVersioning.cpp  PassOptions.inc  PassStageMerger.cpp
dawn/src/dawn/SIR/: SIR.h
dawn/src/dawn/Serialization/: ASTSerializer.cpp
dawn/src/dawn/Support/: FileUtil.cpp  FileUtil.h  StringUtil.cpp  StringUtil.h
dawn/src/dawn/Unittest/: CompilerUtil.cpp  CompilerUtil.h
dawn/src/dawn/Validator/: MultiStageChecker.cpp  MultiStageChecker.h
dawn/src/dawn4py/: CMakeLists.txt  _dawn4py.cpp
dawn/src/dawn4py/serialization/: utils.py
dawn/test/integration-test/dawn/: CMakeLists.txt
dawn/test/integration-test/from-sir/: TestFromSIR.h
dawn/test/unit-test/dawn/CodeGen/: CMakeLists.txt  TestCodeGen.cpp  TestMain.cpp
dawn/test/unit-test/dawn/CodeGen/Naive/: CMakeLists.txt  TestCodeGenNaive.cpp  TestMain.cpp
dawn/test/unit-test/dawn/CodeGen/Naive/input/: asymmetric.iir
dawn/test/unit-test/dawn/CodeGen/Naive/output/: coriolis_stencil.cpp  coriolis_stencil.cu
dawn/test/unit-test/dawn/CodeGen/input/: coriolis_stencil.iir
dawn/test/unit-test/dawn/CodeGen/reference/: global_indexing.cu  laplacian_stencil_opt.cpp
docker/: intel-oneapi.dockerfile
gtclang/src/gtclang/Unittest/: IRSplitter.cpp
scripts/: compile.sh  cuda_compile.sh
(+35 files in other folders)
